// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render App correctly when activities are fetched successfully 1`] = `
<App>
  <Component>
    <Menu
      fixed="top"
      inverted={true}
    >
      <div
        className="ui inverted top fixed menu"
      >
        <Container>
          <div
            className="ui container"
          >
            <MenuItem
              header={true}
            >
              <div
                className="header item"
                onClick={[Function]}
              >
                <img
                  alt="logo"
                  src="/assets/logo.png"
                  style={
                    Object {
                      "marginRight": "10px",
                    }
                  }
                />
                Social Me Die
              </div>
            </MenuItem>
            <MenuItem
              name="Activities"
            >
              <div
                className="item"
                onClick={[Function]}
              >
                Activities
              </div>
            </MenuItem>
            <MenuItem>
              <div
                className="item"
                onClick={[Function]}
              >
                <Button
                  as="button"
                  content="Create Activity"
                  positive={true}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <button
                          class="ui positive button"
                        >
                          Create Activity
                        </button>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <button
                            class="ui positive button"
                          >
                            Create Activity
                          </button>,
                        }
                      }
                    >
                      <button
                        className="ui positive button"
                        onClick={[Function]}
                      >
                        Create Activity
                      </button>
                    </RefFindNode>
                  </Ref>
                </Button>
              </div>
            </MenuItem>
          </div>
        </Container>
      </div>
    </Menu>
  </Component>
  <Container
    style={
      Object {
        "marginTop": "7em",
      }
    }
  >
    <div
      className="ui container"
      style={
        Object {
          "marginTop": "7em",
        }
      }
    >
      <Component
        activities={
          Array [
            Object {
              "category": "Fake Category 1",
              "city": "Fake City",
              "date": 1970-01-01T00:00:01.000Z,
              "description": "Fake description",
              "id": "1",
              "title": "Fake Activity 1",
              "venue": "Fake Venue",
            },
            Object {
              "category": "Fake Category 2",
              "city": "Fake City 2",
              "date": 1970-01-01T00:00:01.000Z,
              "description": "Fake description 2",
              "id": "2",
              "title": "Fake Activity 2",
              "venue": "Fake Venue 2",
            },
          ]
        }
      >
        <Grid>
          <div
            className="ui grid"
          >
            <GridColumn
              width={10}
            >
              <div
                className="ten wide column"
              >
                <Component
                  activities={
                    Array [
                      Object {
                        "category": "Fake Category 1",
                        "city": "Fake City",
                        "date": 1970-01-01T00:00:01.000Z,
                        "description": "Fake description",
                        "id": "1",
                        "title": "Fake Activity 1",
                        "venue": "Fake Venue",
                      },
                      Object {
                        "category": "Fake Category 2",
                        "city": "Fake City 2",
                        "date": 1970-01-01T00:00:01.000Z,
                        "description": "Fake description 2",
                        "id": "2",
                        "title": "Fake Activity 2",
                        "venue": "Fake Venue 2",
                      },
                    ]
                  }
                >
                  <Segment
                    clearing={true}
                  >
                    <div
                      className="ui clearing segment"
                    >
                      <ItemGroup
                        divided={true}
                      >
                        <div
                          className="ui divided items"
                        >
                          <Item
                            key="1"
                          >
                            <div
                              className="item"
                            >
                              <ItemContent>
                                <div
                                  className="content"
                                >
                                  <ItemHeader
                                    as="a"
                                  >
                                    <a
                                      className="header"
                                    >
                                      Fake Activity 1
                                    </a>
                                  </ItemHeader>
                                  <ItemMeta>
                                    <div
                                      className="meta"
                                    >
                                      12/31/1969, 7:00:01 PM
                                    </div>
                                  </ItemMeta>
                                  <ItemDescription>
                                    <div
                                      className="description"
                                    >
                                      <div>
                                        Fake description
                                      </div>
                                      <div>
                                        Fake City
                                        , 
                                        Fake Venue
                                      </div>
                                    </div>
                                  </ItemDescription>
                                  <ItemExtra>
                                    <div
                                      className="extra"
                                    >
                                      <Button
                                        as="button"
                                        color="blue"
                                        content="View"
                                        floated="right"
                                      >
                                        <Ref
                                          innerRef={
                                            Object {
                                              "current": <button
                                                class="ui blue right floated button"
                                              >
                                                View
                                              </button>,
                                            }
                                          }
                                        >
                                          <RefFindNode
                                            innerRef={
                                              Object {
                                                "current": <button
                                                  class="ui blue right floated button"
                                                >
                                                  View
                                                </button>,
                                              }
                                            }
                                          >
                                            <button
                                              className="ui blue right floated button"
                                              onClick={[Function]}
                                            >
                                              View
                                            </button>
                                          </RefFindNode>
                                        </Ref>
                                      </Button>
                                      <Label
                                        basic={true}
                                        content="Fake Category 1"
                                      >
                                        <div
                                          className="ui basic label"
                                          onClick={[Function]}
                                        >
                                          Fake Category 1
                                        </div>
                                      </Label>
                                    </div>
                                  </ItemExtra>
                                </div>
                              </ItemContent>
                            </div>
                          </Item>
                          <Item
                            key="2"
                          >
                            <div
                              className="item"
                            >
                              <ItemContent>
                                <div
                                  className="content"
                                >
                                  <ItemHeader
                                    as="a"
                                  >
                                    <a
                                      className="header"
                                    >
                                      Fake Activity 2
                                    </a>
                                  </ItemHeader>
                                  <ItemMeta>
                                    <div
                                      className="meta"
                                    >
                                      12/31/1969, 7:00:01 PM
                                    </div>
                                  </ItemMeta>
                                  <ItemDescription>
                                    <div
                                      className="description"
                                    >
                                      <div>
                                        Fake description 2
                                      </div>
                                      <div>
                                        Fake City 2
                                        , 
                                        Fake Venue 2
                                      </div>
                                    </div>
                                  </ItemDescription>
                                  <ItemExtra>
                                    <div
                                      className="extra"
                                    >
                                      <Button
                                        as="button"
                                        color="blue"
                                        content="View"
                                        floated="right"
                                      >
                                        <Ref
                                          innerRef={
                                            Object {
                                              "current": <button
                                                class="ui blue right floated button"
                                              >
                                                View
                                              </button>,
                                            }
                                          }
                                        >
                                          <RefFindNode
                                            innerRef={
                                              Object {
                                                "current": <button
                                                  class="ui blue right floated button"
                                                >
                                                  View
                                                </button>,
                                              }
                                            }
                                          >
                                            <button
                                              className="ui blue right floated button"
                                              onClick={[Function]}
                                            >
                                              View
                                            </button>
                                          </RefFindNode>
                                        </Ref>
                                      </Button>
                                      <Label
                                        basic={true}
                                        content="Fake Category 2"
                                      >
                                        <div
                                          className="ui basic label"
                                          onClick={[Function]}
                                        >
                                          Fake Category 2
                                        </div>
                                      </Label>
                                    </div>
                                  </ItemExtra>
                                </div>
                              </ItemContent>
                            </div>
                          </Item>
                        </div>
                      </ItemGroup>
                    </div>
                  </Segment>
                </Component>
              </div>
            </GridColumn>
            <GridColumn
              width={6}
            >
              <div
                className="six wide column"
              >
                <Component>
                  <Card
                    fluid={true}
                  >
                    <div
                      className="ui fluid card"
                      onClick={[Function]}
                    >
                      <Image
                        as="img"
                        src="/assets/placeholder.png"
                        ui={false}
                        wrapped={true}
                      >
                        <div
                          className="image"
                        >
                          <img
                            src="/assets/placeholder.png"
                          />
                        </div>
                      </Image>
                      <CardContent>
                        <div
                          className="content"
                        >
                          <CardHeader>
                            <div
                              className="header"
                            >
                              Title
                            </div>
                          </CardHeader>
                          <CardMeta>
                            <div
                              className="meta"
                            >
                              <span>
                                Date
                              </span>
                            </div>
                          </CardMeta>
                          <CardDescription>
                            <div
                              className="description"
                            >
                              Description
                            </div>
                          </CardDescription>
                        </div>
                      </CardContent>
                      <CardContent
                        extra={true}
                      >
                        <div
                          className="extra content"
                        >
                          <ButtonGroup
                            widths={2}
                          >
                            <div
                              className="ui two buttons"
                            >
                              <Button
                                as="button"
                                basic={true}
                                color="blue"
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui blue basic button"
                                      >
                                        Edit
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui blue basic button"
                                        >
                                          Edit
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui blue basic button"
                                      onClick={[Function]}
                                    >
                                      Edit
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                              <Button
                                as="button"
                                basic={true}
                                color="grey"
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui grey basic button"
                                      >
                                        Cancel
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui grey basic button"
                                        >
                                          Cancel
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui grey basic button"
                                      onClick={[Function]}
                                    >
                                      Cancel
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                            </div>
                          </ButtonGroup>
                        </div>
                      </CardContent>
                    </div>
                  </Card>
                </Component>
              </div>
            </GridColumn>
          </div>
        </Grid>
      </Component>
    </div>
  </Container>
</App>
`;

exports[`Should render App correctly with empty activity list 1`] = `
<App>
  <Component>
    <Menu
      fixed="top"
      inverted={true}
    >
      <div
        className="ui inverted top fixed menu"
      >
        <Container>
          <div
            className="ui container"
          >
            <MenuItem
              header={true}
            >
              <div
                className="header item"
                onClick={[Function]}
              >
                <img
                  alt="logo"
                  src="/assets/logo.png"
                  style={
                    Object {
                      "marginRight": "10px",
                    }
                  }
                />
                Social Me Die
              </div>
            </MenuItem>
            <MenuItem
              name="Activities"
            >
              <div
                className="item"
                onClick={[Function]}
              >
                Activities
              </div>
            </MenuItem>
            <MenuItem>
              <div
                className="item"
                onClick={[Function]}
              >
                <Button
                  as="button"
                  content="Create Activity"
                  positive={true}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <button
                          class="ui positive button"
                        >
                          Create Activity
                        </button>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <button
                            class="ui positive button"
                          >
                            Create Activity
                          </button>,
                        }
                      }
                    >
                      <button
                        className="ui positive button"
                        onClick={[Function]}
                      >
                        Create Activity
                      </button>
                    </RefFindNode>
                  </Ref>
                </Button>
              </div>
            </MenuItem>
          </div>
        </Container>
      </div>
    </Menu>
  </Component>
  <Container
    style={
      Object {
        "marginTop": "7em",
      }
    }
  >
    <div
      className="ui container"
      style={
        Object {
          "marginTop": "7em",
        }
      }
    >
      <Component
        activities={Array []}
      >
        <Grid>
          <div
            className="ui grid"
          >
            <GridColumn
              width={10}
            >
              <div
                className="ten wide column"
              >
                <Component
                  activities={Array []}
                >
                  <Segment
                    clearing={true}
                  >
                    <div
                      className="ui clearing segment"
                    >
                      <ItemGroup
                        divided={true}
                      >
                        <div
                          className="ui divided items"
                        />
                      </ItemGroup>
                    </div>
                  </Segment>
                </Component>
              </div>
            </GridColumn>
            <GridColumn
              width={6}
            >
              <div
                className="six wide column"
              >
                <Component>
                  <Card
                    fluid={true}
                  >
                    <div
                      className="ui fluid card"
                      onClick={[Function]}
                    >
                      <Image
                        as="img"
                        src="/assets/placeholder.png"
                        ui={false}
                        wrapped={true}
                      >
                        <div
                          className="image"
                        >
                          <img
                            src="/assets/placeholder.png"
                          />
                        </div>
                      </Image>
                      <CardContent>
                        <div
                          className="content"
                        >
                          <CardHeader>
                            <div
                              className="header"
                            >
                              Title
                            </div>
                          </CardHeader>
                          <CardMeta>
                            <div
                              className="meta"
                            >
                              <span>
                                Date
                              </span>
                            </div>
                          </CardMeta>
                          <CardDescription>
                            <div
                              className="description"
                            >
                              Description
                            </div>
                          </CardDescription>
                        </div>
                      </CardContent>
                      <CardContent
                        extra={true}
                      >
                        <div
                          className="extra content"
                        >
                          <ButtonGroup
                            widths={2}
                          >
                            <div
                              className="ui two buttons"
                            >
                              <Button
                                as="button"
                                basic={true}
                                color="blue"
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui blue basic button"
                                      >
                                        Edit
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui blue basic button"
                                        >
                                          Edit
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui blue basic button"
                                      onClick={[Function]}
                                    >
                                      Edit
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                              <Button
                                as="button"
                                basic={true}
                                color="grey"
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui grey basic button"
                                      >
                                        Cancel
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui grey basic button"
                                        >
                                          Cancel
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui grey basic button"
                                      onClick={[Function]}
                                    >
                                      Cancel
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                            </div>
                          </ButtonGroup>
                        </div>
                      </CardContent>
                    </div>
                  </Card>
                </Component>
              </div>
            </GridColumn>
          </div>
        </Grid>
      </Component>
    </div>
  </Container>
</App>
`;
